--- a/app/src/main/res/layout/activity_side_panel.xml
+++ b/app/src/main/res/layout/activity_side_panel.xml
@@ -1,24 +1,77 @@
-<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context=".SidePanelActivity">
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawerLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
-    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
+    <!-- The main content view -->
+    <RelativeLayout
+        android:id="@+id/mainContent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!-- android:layout_gravity="start" tells DrawerLayout to treat
-         this as a sliding drawer on the left side for left-to-right
-         languages and on the right side for right-to-left languages.
-         If you're not building against API 17 or higher, use
-         android:layout_gravity="left" instead. -->
-    <!-- The drawer is given a fixed width in dp and extends the full height of
-         the container. -->
-    <fragment android:id="@+id/navigation_drawer"
-        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
-        android:layout_gravity="start" android:name="p.social.ent.NavigationDrawerFragment"
-        tools:layout="@layout/fragment_navigation_drawer" />
+    <!-- The navigation drawer -->
+    <LinearLayout
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:id="@+id/drawerPane"
+        android:layout_gravity="start"
+        android:background="#fff0f0"
+        android:orientation="vertical">
+
+
+
+        <!-- List of Actions (pages) -->
+        <ListView
+            android:id="@+id/drawerList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:choiceMode="singleChoice"
+            android:background="@android:color/black"
+            android:divider="@color/theme_color"
+            android:dividerHeight="1dp"
+            android:scrollbars="none"
+            android:layout_weight="1"/>
+
+        <!--sharing section-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:text="Connect with us"
+                android:textSize="20sp"
+                android:textColor="@color/theme_color"/>
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="40dp"
+               android:orientation="horizontal">
+               <ImageButton
+                   android:layout_width="30dp"
+                   android:layout_height="30dp"
+                   android:src="@mipmap/icon_connect_facebook"
+                   android:background="@android:color/transparent"/>
+               <ImageButton
+                   android:layout_width="30dp"
+                   android:layout_height="30dp"
+                   android:src="@mipmap/icon_connect_twitter"
+                   android:background="@android:color/transparent"/>
+               <ImageButton
+                   android:layout_width="30dp"
+                   android:layout_height="30dp"
+                   android:src="@mipmap/icon_connect_instagram"
+                   android:background="@android:color/transparent"/>
+               <ImageButton
+                   android:layout_width="30dp"
+                   android:layout_height="30dp"
+                   android:src="@mipmap/icon_connect_youtube"
+                   android:background="@android:color/transparent"/>
+           </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
